# django_null

./: .gitignore  TODO  data.txt  fgdsjhgjfsd.py  fkjdshfkjsd.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
apps/: admin.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_a_b_c_d.py  0002_alter_product_name.py  0002_category_product_category.py  0002_delete_product.py  0003_image.py  0003_product.py  0003_product1234.py  0003_product_is_premium.py  0004_alter_product_options.py  0004_productimage.py  0004_producttttt.py  0005_alter_product_options_product_data.py  0005_alter_productimage_product.py  0005_book_bookcategory_delete_product1234_and_more.py  0006_genre_film.py  0006_remove_product_data_product_slug.py  0007_film_owner.py  0008_product_status.py
root/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: custom_change_form.html
